# EmotionalMagenta

./: .gitattributes  .gitignore  LICENSE  README.md  REBUILD.md  THIRD_PARTY_NOTICES.md  emotion_prompt_formatting.csv  emotion_prompt_formatting.numbers  main.py  pyproject.toml  pyrightconfig.json  references.txt
magenta-realtime/: CMakeLists.txt
magenta-realtime/core/: CMakeLists.txt  README.md
magenta-realtime/core/include/magentart/: mlx_engine.h  realtime_runner.h  ring_buffer.h
magenta-realtime/core/include/magentart/detail/: autorelease_pool.h
magenta-realtime/core/src/: autorelease_pool.cpp  midi_note_tracker.cpp  midi_note_tracker.h  mlx_engine.cpp  numpy_random_state.h  realtime_runner.cpp
magenta-realtime/examples/: package-lock.json  package.json
magenta-realtime/examples/collider/: CMakeLists.txt  ColliderApp.mm  ColliderAppController.h  ColliderAppController.mm  ColliderInfo.plist.in  collider_emotion_bridge.py
magenta-realtime/examples/collider/ui/: index.html  package.json  postbuild.js
magenta-realtime/examples/collider/ui/config/: postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  tsconfig.shared.json  vite.config.ts
magenta-realtime/examples/collider/ui/src/: App.tsx  index.css  main.tsx
magenta-realtime/examples/common/assets/: AppIcon.icns
magenta-realtime/examples/common/cpp/: audio_level_processor.h  magenta_paths.cpp  magenta_paths.h
magenta-realtime/examples/common/objc/: MagentaModelDownloader.h  MagentaModelDownloader.mm  MagentaModelManager.h  MagentaModelManager.mm  MagentaSettings.h  MagentaSettings.mm
magenta-realtime/examples/common/react_ui/: AudioMeter.tsx  Knob.tsx  MagentaDropdown.tsx  MagentaToggle.tsx  MidiSelector.tsx  ModelSelector.tsx  PianoKeyboard.tsx  PromptSurface.tsx  ResourceOnboardingModal.tsx  Settings.tsx  SettingsPanel.tsx  TimingIndicator.tsx  TransportControls.tsx  VolumeControl.tsx  colors.ts  defaultParams.ts  index.ts  package.json  prompt-surface.css  promptSuggestion.ts  shared.css  theme.ts
magenta-realtime/magenta_rt/: __init__.py  audio.py  config.py  musiccoca.py  paths.py
magenta-realtime/magenta_rt/_vendor/: __init__.py  _vendor_hook.py
magenta-realtime/magenta_rt/_vendor/sequence-layers/: README.md  pyproject.toml
magenta-realtime/magenta_rt/_vendor/sequence-layers/sequence_layers/jax/: types.py
magenta-realtime/magenta_rt/_vendor/sequence-layers/sequence_layers/mlx/: __init__.py  attention.py  basic_types.py  combinators.py  conditioning.py  convolution.py  convolution2d.py  dense.py  dsp.py  export.py  init_mapping.py  normalization.py  pooling.py  position.py  projection_configs.py  signal.py  simple.py  types.py  typing.py  utils.py  weight_converter.py
magenta-realtime/magenta_rt/cli/: __init__.py  jax_commands.py  mlx_commands.py  models_commands.py
magenta-realtime/magenta_rt/data/: example_prompt_set.csv
magenta-realtime/magenta_rt/jax/: depthformer.py  generate.py  model.py  spectrostream.py  system.py  transformer.py
magenta-realtime/magenta_rt/mlx/: depthformer.py  export.py  export_sinusoids.py  generate.py  gptq.py  load_weights.py  model.py  system.py  transformer.py
magenta-realtime/magenta_rt/mlx/spectrostream/: __init__.py  load_weights.py  modeling.py
prebuilt/collider/collider_em.app/Contents/: Info.plist
prebuilt/collider/collider_em.app/Contents/MacOS/: collider_em
prebuilt/collider/collider_em.app/Contents/Resources/: AppIcon.icns  collider_emotion_bridge.py
prebuilt/collider/collider_em.app/Contents/Resources/collider_ui/: index.html
prebuilt/collider/collider_em.app/Contents/_CodeSignature/: CodeResources
prebuilt/collider/mrt2_collider.app/Contents/: Info.plist
prebuilt/collider/mrt2_collider.app/Contents/MacOS/: mlx.metallib  mrt2_collider
prebuilt/collider/mrt2_collider.app/Contents/Resources/: collider_emotion_bridge.py
prebuilt/collider/mrt2_collider.app/Contents/Resources/collider_ui/: index.html
prebuilt/collider/mrt2_collider.app/Contents/_CodeSignature/: CodeResources
scripts/: rebuild_all.sh  run_5min_runtime_test.sh  stage_prebuilt_collider.sh
src/core/: __init__.py  analyzer.py  camera.py
